--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -199,8 +199,6 @@ RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/_Level/_LevelAssets/_CamSwitcher/CamSwitchWithTracker.CamSwitchWithTracker
-OpenAssetsAtExit=/Game/_Core/_Player/DI_Player.DI_Player
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Engine/EditorMeshes/MatineeCam_SM
@@ -847,6 +845,7 @@ DI_Player_C.Default=True
 DI_Player_C.Widgets=True
 DI_Player_C.Player Variables=True
 DI_Player_C.ComponentTick=True
+DI_Player_C.Weapon Info=True
 DI_Player_C.Weapon Info=True
 DI_Player_C.Weapon Info=True
 DI_Player_C.Weapon Info=True
@@ -2955,7 +2954,6 @@ CameraComponent.Physics=True
 CamSwitchWithTracker_C.Cooking=True
 BoxComponent.RayTracing=True
 NiagaraActor.RayTracing=True
-DI_Player_C.Weapon Info =True
 GeneralProjectSettings.About=True
 GeneralProjectSettings.Publisher=True
 GeneralProjectSettings.Legal=True
@@ -3167,7 +3165,7 @@ TextureImportSettings.ImportSettings=True
 UMGEditorProjectSettings.Compiler=True
 UMGEditorProjectSettings.Class Filtering=True
 UMGEditorProjectSettings.Designer=True
-UMGEditorProjectSettings.Designer =True
+UMGEditorProjectSettings.Designer=True
 AndroidRuntimeSettings.APK Packaging=True
 AndroidRuntimeSettings.App Bundles=True
 AndroidRuntimeSettings.Build=True
@@ -3274,6 +3272,7 @@ UdpMessagingSettings.Transport=True
 UdpMessagingSettings.Tunnel=True
 WmfMediaSettings.Media=True
 WmfMediaSettings.Debug=True
+UMGEditorProjectSettings.Designer =True
 
 [DetailPropertyExpansion]
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
@@ -3302,7 +3301,7 @@ LevelEditorPlaySettings="\"Object.Multiplayer Options.NetworkEmulationSettings\"
 PersonaOptions="\"Object.Preview Scene.Preview Scene|AdditionalMesh\" "
 AutomationTestSettings="\"Object.Loading.EditorTestModules\" \"Object.Automation.BuildPromotionTest\" \"Object.Automation.BuildPromotionTest.ImportWorkflow\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Diffuse\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Normal\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.StaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SkeletalMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Sound\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SurroundSound\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.ReimportStaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.BlendShapeMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.MorphMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Animation\" \"Object.Automation.BuildPromotionTest.OpenAssets\" \"Object.Automation.BuildPromotionTest.NewProjectSettings\" \"Object.Automation.BlueprintEditorPromotionTest\" \"Object.Automation.MaterialEditorPromotionTest\" \"Object.Automation.ParticleEditorPromotionTest\" \"Object.MiscAutomationSetups.TestLevelFolders\" "
 EnhancedInputEditorSettings="\"Object.Blueprints\" "
-DeveloperSettingsBackedByCVars="\"Object.Blueprints\" "
+DeveloperSettingsBackedByCVars=
 EditorExperimentalSettings="\"Object.Blueprints\" "
 LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridSizes\" \"Object.GridSnapping.DecimalGridIntervals\" \"Object.GridSnapping.DivisionsOf360RotGridSizes\" \"Object.GridSnapping.Pow2GridSizes\" \"Object.GridSnapping.Pow2GridIntervals\" \"Object.GridSnapping.CommonRotGridSizes\" \"Object.GridSnapping.ScalingGridSizes\" \"Object.Preview.PreviewMeshes\" "
 EditorStyleSettings="\"Object.UserInterface.AdditionalSelectionColors\" \"Object.Graphs.GraphBackgroundBrush\" \"Object.Graphs.GraphBackgroundBrush.TintColor\" \"Object.Graphs.GraphBackgroundBrush.OutlineSettings.Color\" "
@@ -3398,6 +3397,7 @@ WGP_DeathScreen_C=
 EnnemySpawner_C=
 EditorNotifyObject="\"Object.Event.Event\" "
 EditorAnimBaseObj="\"Object.Event.Event\" "
+RawInputSettings="\"Object.Device Configurations.DeviceConfigurations\" "
 
 [DetailCategoriesAdvanced]
 CanvasPanel.Behavior=True
@@ -5723,6 +5723,7 @@ CrashReporterSettings=True
 DataValidationSettings=True
 GameplayTagsDeveloperSettings=True
 GeneralProjectSettings=True
+RawInputSettings=True
 
 [FBX_Export_UI_Option_FbxExportOption]
 FbxExportCompatibility=FBX_2013
