--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -194,11 +194,8 @@ Common=False
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationEditor
@@ -209,16 +206,13 @@ RecentAssetEditors=TextureEditor
 OpenAssetsAtExit=/Game/_Core/_Player/DI_Player.DI_Player
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Level/_LevelAssets/_CamSwitcher/CamSwitchWithTracker
-MRUItem1=/Game/_Core/_Player/DI_Player
-MRUItem2=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem3=/Game/_Core/BPInterfaces/BPI_Player
-MRUItem4=/Game/_Core/_Enemies/_Ennemy_Spawner/Random_ESpanwer
-MRUItem5=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Bandage_Heal
-MRUItem6=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Medkit_Heal
-MRUItem7=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_KnockedOver
-MRUItem8=/Game/_Level/_LevelAssets/_OGFiles/Whitewood_Wall2_Texture
-MRUItem9=/Game/_Level/_LevelAssets/_OGFiles/Whitewood_Wall_Texture
+MRUItem0=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem1=/Game/_Core/_Enemies/_Ennemy_Spawner/Random_ESpanwer
+MRUItem2=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Bandage_Heal
+MRUItem3=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Medkit_Heal
+MRUItem4=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_KnockedOver
+MRUItem5=/Game/_Level/_LevelAssets/_OGFiles/Whitewood_Wall2_Texture
+MRUItem6=/Game/_Level/_LevelAssets/_OGFiles/Whitewood_Wall_Texture
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -233,7 +227,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Player
+ContentBrowserDrawer.SelectedPaths=/Game/_Level
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -4200,10 +4194,10 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=AssetCheck
 
 [RootWindow]
-ScreenPosition=X=488.000 Y=141.000
+ScreenPosition=X=1993.000 Y=173.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
