--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -195,8 +195,9 @@ Common=False
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -204,17 +205,18 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-OpenAssetsAtExit=/Game/_Core/_Enemies/_Ennemy_Spawner/EnnemySpawner.EnnemySpawner
+RecentAssetEditors=
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Core/_Enemies/_Ennemy_Spawner/EnnemySpawner
-MRUItem1=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem2=/Game/_Core/_Enemies/_Ennemy_Spawner/Random_ESpanwer
-MRUItem3=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Bandage_Heal
-MRUItem4=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Medkit_Heal
-MRUItem5=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_KnockedOver
-MRUItem6=/Game/_Level/_LevelAssets/_OGFiles/Whitewood_Wall2_Texture
-MRUItem7=/Game/_Level/_LevelAssets/_OGFiles/Whitewood_Wall_Texture
+MRUItem0=/Game/_Core/_Player/_PlayerAnimations/_Animations/walk/Carpenter_Crawl
+MRUItem1=/Game/_Core/_Enemies/_Ennemy_Spawner/EnnemySpawner
+MRUItem2=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem3=/Game/_Core/_Enemies/_Ennemy_Spawner/Random_ESpanwer
+MRUItem4=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Bandage_Heal
+MRUItem5=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Medkit_Heal
+MRUItem6=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_KnockedOver
+MRUItem7=/Game/_Level/_LevelAssets/_OGFiles/Whitewood_Wall2_Texture
+MRUItem8=/Game/_Level/_LevelAssets/_OGFiles/Whitewood_Wall_Texture
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -229,7 +231,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/_Level
+ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Player/_PlayerAnimations/_Animations/walk
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3437,7 +3439,7 @@ CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transfo
 PanelWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 Widget="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 Visual="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-Object=
+Object="\"Object.SkeletalMeshes\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
@@ -4146,6 +4148,7 @@ CameraComponent.ComponentTick=True
 /Game/_Core/_Enemies/_Ennemy_Spawner/Random_ESpanwer.Random_ESpanwer=1
 /Game/_Core/_Player/Camera.Camera=0
 /Game/_Core/BPInterfaces/BPI_Player.BPI_Player=0
+/Game/_Core/_Player/_PlayerAnimations/_Animations/walk/Carpenter_Crawl.Carpenter_Crawl=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -4198,10 +4201,10 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [MessageLog]
-LastLogListing=AssetCheck
+LastLogListing=LoadErrors
 
 [RootWindow]
-ScreenPosition=X=1993.000 Y=173.000
+ScreenPosition=X=317.000 Y=177.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -5322,8 +5325,8 @@ ExternalImagePicker.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=E:/Unreal engines/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=E:/Unreal engines/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [PlacementMode]
 RecentlyPlaced=/Game/_Core/_Weapons/Sig_Sauer/SigSauer_Body_SM.SigSauer_Body_SM;
