--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -197,11 +197,20 @@ LastLevel=/Game/_Level/Island
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=AnimationEditor
-OpenAssetsAtExit=/Game/_Core/_Player/DI_Player.DI_Player
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Medkit_Heal
+MRUItem0=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Wall
+MRUItem1=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Lock
+MRUItem2=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Door2
+MRUItem3=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Door1
+MRUItem4=/Game/_Level/_LevelAssets/_Props/_Outside/Gate
+MRUItem5=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Medkit_Heal
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -216,7 +225,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/_Level
+ContentBrowserDrawer.SelectedPaths=/Game/_Level/_LevelAssets/_Props/_Outside
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -238,7 +247,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.603907704
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/_Level/_LevelAssets/_Environment_Assets/Stand
+ContentBrowserTab1.SelectedPaths=/Game/_Level/_LevelAssets/_Props/_Outside
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -841,6 +850,7 @@ DI_Player_C.Default=True
 DI_Player_C.Widgets=True
 DI_Player_C.Player Variables=True
 DI_Player_C.ComponentTick=True
+DI_Player_C.Weapon Info=True
 DI_Player_C.Weapon Info=True
 DI_Player_C.Weapon Info=True
 DI_Player_C.Weapon Info=True
@@ -3437,14 +3447,13 @@ MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
 MaterialExpressionVectorParameter.MaterialExpression=True
 MaterialExpressionVectorParameter.CustomPrimitiveData=True
 MaterialExpressionVectorParameter.ParameterCustomization=True
-DI_Player_C.Weapon Info =True
 
 [DetailPropertyExpansion]
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 PanelWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 Widget="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 Visual="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.SphylElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
@@ -4166,6 +4175,11 @@ CameraComponent.ComponentTick=True
 /Game/_Level/_LevelAssets/_Props/_Materials/Thin_Light1.Thin_Light1=1
 /Game/_Level/_LevelAssets/_Environment_Assets/Stairs/materials/woodstair_M.woodstair_M=0
 /Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Bandage_Heal.Carpenter_Bandage_Heal=1
+/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Door1.Gate_Door1=1
+/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Door2.Gate_Door2=1
+/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Lock.Gate_Lock=1
+/Game/_Level/_LevelAssets/_Props/_Outside/Gate.Gate=1
+/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Wall.Gate_Wall=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -4218,10 +4232,10 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [MessageLog]
-LastLogListing=AssetCheck
+LastLogListing=FBXImport
 
 [RootWindow]
-ScreenPosition=X=2146.000 Y=115.000
+ScreenPosition=X=317.000 Y=153.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -5342,8 +5356,8 @@ ExternalImagePicker.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=E:/Unreal engines/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=E:/Unreal engines/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [PlacementMode]
 RecentlyPlaced=/Game/_Level/_LevelAssets/_Props/_Furniture/Tavern_Rail.Tavern_Rail;
