--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -197,26 +197,16 @@ LastLevel=/Game/_Level/Island
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=AnimationEditor
-OpenAssetsAtExit=/Game/_Core/_Player/DI_Player.DI_Player
-OpenAssetsAtExit=/Game/_Core/_Player/_Widgets/_Widgets/Demoo/Demmo_UI.Demmo_UI
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Core/_Player/_Widgets/_Widgets/Demoo/Demmo_UI
-MRUItem1=/Game/_Core/_Player/DI_Player
-MRUItem2=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Wall
-MRUItem3=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Lock
-MRUItem4=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Door2
-MRUItem5=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Door1
-MRUItem6=/Game/_Level/_LevelAssets/_Props/_Outside/Gate
-MRUItem7=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Medkit_Heal
+MRUItem0=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Wall
+MRUItem1=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Lock
+MRUItem2=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Door2
+MRUItem3=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Medkit_Heal
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -231,7 +221,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/_Level
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -856,6 +846,7 @@ DI_Player_C.Default=True
 DI_Player_C.Widgets=True
 DI_Player_C.Player Variables=True
 DI_Player_C.ComponentTick=True
+DI_Player_C.Weapon Info=True
 DI_Player_C.Weapon Info=True
 DI_Player_C.Weapon Info=True
 DI_Player_C.Weapon Info=True
@@ -3453,7 +3444,6 @@ MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
 MaterialExpressionVectorParameter.MaterialExpression=True
 MaterialExpressionVectorParameter.CustomPrimitiveData=True
 MaterialExpressionVectorParameter.ParameterCustomization=True
-DI_Player_C.Weapon Info =True
 DecalComponent.Variable=True
 DecalComponent.TransformCommon=True
 DecalComponent.Sockets=True
@@ -4251,7 +4241,7 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=AssetCheck
 
 [RootWindow]
 ScreenPosition=X=317.000 Y=153.000
