--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -195,18 +195,20 @@ Common=False
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=AnimationEditor
+OpenAssetsAtExit=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_Knive.Bp_Knive
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Wall
-MRUItem1=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Lock
-MRUItem2=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Door2
-MRUItem3=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Medkit_Heal
+MRUItem0=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_Knive
+MRUItem1=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Wall
+MRUItem2=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Lock
+MRUItem3=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Door2
+MRUItem4=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Medkit_Heal
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -4241,7 +4243,7 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [MessageLog]
-LastLogListing=AssetCheck
+LastLogListing=LoadErrors
 
 [RootWindow]
 ScreenPosition=X=317.000 Y=153.000
