--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -195,7 +195,7 @@ Common=False
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
@@ -204,7 +204,6 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=AnimationEditor
-OpenAssetsAtExit=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_Knive.Bp_Knive
 OpenAssetsAtExit=/Game/_Core/_Player/DI_Player.DI_Player
 
 [AssetEditorSubsystemRecents]
@@ -3470,7 +3469,7 @@ CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transfo
 PanelWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 Widget="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 Visual="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-Object=
+Object="\"Object.Decal.DecalColor\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
@@ -4254,9 +4253,9 @@ GraphEditorQuickJumps=()
 LastLogListing=LoadErrors
 
 [RootWindow]
-ScreenPosition=X=317.000 Y=153.000
+ScreenPosition=X=2039.000 Y=50.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
