Fix controller Xbox

--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -195,8 +195,9 @@ Common=False
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -214,20 +215,21 @@ RecentAssetEditors=AnimationEditor
 OpenAssetsAtExit=/Game/_Core/_Player/DI_Player.DI_Player
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Core/_Weapons/AmmoToSpawn/_Casings/CasingPis
+MRUItem0=/Game/_Core/_Player/_Inputs/_IMP/AllMayorKeyInputs
 MRUItem1=/Game/_Core/_Player/DI_Player
-MRUItem2=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_Knive
-MRUItem3=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_RAR
-MRUItem4=/Game/_Level/_LevelAssets/_Environment_Assets/container/container_body
-MRUItem5=/Game/_Core/_Enemies/BP_KronenFast
-MRUItem6=/Game/_Core/_Enemies/BP_KronenFemale
-MRUItem7=/Game/_Core/_Enemies/BP_Kronen
-MRUItem8=/Game/_Core/_Enemies/BP_Bulky
-MRUItem9=/Game/_Core/_Player/_Assets/_Textures/_Meterials/Carp_M
-MRUItem10=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Wall
-MRUItem11=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Lock
-MRUItem12=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Door2
-MRUItem13=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Medkit_Heal
+MRUItem2=/Game/_Core/_Weapons/AmmoToSpawn/_Casings/CasingPis
+MRUItem3=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_Knive
+MRUItem4=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_RAR
+MRUItem5=/Game/_Level/_LevelAssets/_Environment_Assets/container/container_body
+MRUItem6=/Game/_Core/_Enemies/BP_KronenFast
+MRUItem7=/Game/_Core/_Enemies/BP_KronenFemale
+MRUItem8=/Game/_Core/_Enemies/BP_Kronen
+MRUItem9=/Game/_Core/_Enemies/BP_Bulky
+MRUItem10=/Game/_Core/_Player/_Assets/_Textures/_Meterials/Carp_M
+MRUItem11=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Wall
+MRUItem12=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Lock
+MRUItem13=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Door2
+MRUItem14=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Medkit_Heal
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -242,7 +244,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Weapons/AmmoToSpawn/_Mags
+ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Player/_Inputs/_IMP
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -867,6 +869,7 @@ DI_Player_C.Default=True
 DI_Player_C.Widgets=True
 DI_Player_C.Player Variables=True
 DI_Player_C.ComponentTick=True
+DI_Player_C.Weapon Info=True
 DI_Player_C.Weapon Info=True
 DI_Player_C.Weapon Info=True
 DI_Player_C.Weapon Info=True
@@ -3483,7 +3486,6 @@ EnnemySpawner_C.LevelInstance=True
 EnnemySpawner_C.Cooking=True
 Bp_RAR_C.Default=True
 Bp_RAR_C.AnimNotify=True
-DI_Player_C.Weapon Info =True
 CasingPis_C.Default=True
 CasingPis_C.Tick=True
 CasingPis_C.Replication=True
@@ -3495,6 +3497,7 @@ CasingPis_C.HLOD=True
 CasingPis_C.Physics=True
 CasingPis_C.WorldPartition=True
 CasingPis_C.Events=True
+DI_Player_C.Weapon Info =True
 
 [DetailPropertyExpansion]
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
@@ -3538,7 +3541,7 @@ ComboBoxKey="\"Object.Content.Options\" \"Object.Render Transform.RenderTransfor
 Spacer="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 ComboBoxString="\"Object.Content.DefaultOptions\" \"Object.Style.WidgetStyle\" \"Object.Style.ItemStyle\" \"Object.Style.ItemStyle.InactiveHoveredBrush.TintColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
-DataAsset="\"Object.SkeletalMeshes\" "
+DataAsset=
 SkeletalMesh="\"Object.LODSettings.MinLod\" \"Object.LODSettings.MaxNumStreamedLODs\" \"Object.LODSettings.MaxNumOptionalLODs\" \"Object.LODSettings.DisableBelowMinLodStripping\" \"Object.LODSettings.bSupportLODStreaming\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 SkinnedAsset="\"Object.LODSettings.MinLod\" \"Object.LODSettings.MaxNumStreamedLODs\" \"Object.LODSettings.MaxNumOptionalLODs\" \"Object.LODSettings.DisableBelowMinLodStripping\" \"Object.LODSettings.bSupportLODStreaming\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 LODInfoUILayout="\"Object.LODInfo.ScreenSize\" \"Object.LODInfo.BuildSettings\" \"Object.LODInfo.ReductionSettings\" "
@@ -3605,7 +3608,7 @@ SoundBase="\"Object.Format.Format|Quality\" \"Object.Analysis.Analysis|FFT\" \"O
 Di_Splash_C=
 CapsuleComponent=
 LevelSequenceActor=
-InputMappingContext="\"Object.Mappings.Mappings.Mappings[27]\" \"Object.Mappings.Mappings.Mappings[28]\" \"Object.Mappings.Mappings.Mappings[29]\" \"Object.Mappings.Mappings.Mappings[31]\" \"Object.Mappings.Mappings.Mappings[32]\" \"Object.Mappings.Mappings.Mappings[34]\" \"Object.Mappings.Mappings.Mappings[35]\" \"Object.Mappings.Mappings.Mappings[36]\" "
+InputMappingContext="\"Object.Mappings.Mappings.Mappings[11]\" \"Object.Mappings.Mappings.Mappings[27]\" \"Object.Mappings.Mappings.Mappings[28]\" \"Object.Mappings.Mappings.Mappings[29]\" "
 DevMode_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 WGP_DemoMenu_C=
 EndDemo_C=
@@ -5588,9 +5591,9 @@ Di_Splash_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCo
 LevelInstance=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.TransformCommon.Transform,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshActor.Physics.ConstraintsGroup,Cam_C.PostProcess.Lens,CameraComponent.PostProcess.Global Illumination,BP_Charger_C.Collision.Collision,BP_Charger_C.TransformCommon.Transform,BP_Charger_C.Physics.ConstraintsGroup,BP_Bulky_C.Collision.Collision,Ferry_BP_C.TransformCommon.Transform
 Blueprint=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.TransformCommon.Transform,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshActor.Physics.ConstraintsGroup,SphereComponent.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,CameraComponent.PostProcess.Global Illumination,Cam_C.PostProcess.Lens,BP_Bulky_C.Collision.Collision,BP_Charger_C.Collision.Collision,BP_Charger_C.TransformCommon.Transform,BP_Charger_C.Physics.ConstraintsGroup,BP_KronenFast_C.Collision.Collision,BP_KronenFast_C.TransformCommon.Transform,BP_KronenFast_C.Physics.ConstraintsGroup,BP_KronenFemale_C.Collision.Collision,BP_KronenFemale_C.TransformCommon.Transform,BP_KronenFemale_C.Physics.ConstraintsGroup,BP_Kronen_C.TransformCommon.Transform,BP_Kronen_C.Physics.ConstraintsGroup,BP_StartNewGame_C.TransformCommon.Transform,BP_Slugger_C.TransformCommon.Transform,BP_Slugger_C.Physics.ConstraintsGroup,BP_Slugger_C.Collision.Collision,Blueprint.Interfaces.Inherited Interfaces,Blueprint.Interfaces.Implemented Interfaces,Ferry_BP_C.TransformCommon.Transform,TextRenderComponent.TransformCommon.Transform,LevelSequenceActor.TransformCommon.Transform
 K2Node_Variable=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshActor.Physics.ConstraintsGroup,SphereComponent.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,SceneComponent.TransformCommon.Transform,CameraComponent.PostProcess.Global Illumination
-InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_UseMedkit.IA_UseMedkit,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_UseBandage.IA_UseBandage
-InputAction=
-K2Node_EnhancedInputAction=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshActor.Physics.ConstraintsGroup,SphereComponent.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,Cam_C.PostProcess.Lens,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Lens,BP_Charger_C.Collision.Collision,BP_Charger_C.TransformCommon.Transform,BP_Charger_C.Physics.ConstraintsGroup,BP_Bulky_C.Collision.Collision,BP_KronenFast_C.Collision.Collision,BP_KronenFast_C.TransformCommon.Transform,BP_KronenFast_C.Physics.ConstraintsGroup,BP_KronenFemale_C.TransformCommon.Transform,BP_KronenFemale_C.Physics.ConstraintsGroup,BP_KronenFemale_C.Collision.Collision,BP_Kronen_C.TransformCommon.Transform,BP_Kronen_C.Physics.ConstraintsGroup,BP_Slugger_C.TransformCommon.Transform,BP_Slugger_C.Physics.ConstraintsGroup,BP_Slugger_C.Collision.Collision,BP_StartNewGame_C.TransformCommon.Transform,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,BoxComponent.Collision.Collision,Ferry_BP_C.TransformCommon.Transform,LevelSequenceActor.TransformCommon.Transform,TextRenderComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.Items To Drop,K2Node_VariableGet.DefaultValueCategory.Textures,K2Node_VariableGet.DefaultValueCategory.SpriteComponent,K2Node_VariableGet.DefaultValueCategory.Ennemy
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_UseMedkit.IA_UseMedkit,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_UseBandage.IA_UseBandage,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_Combad.IA_Combad,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_FlashLight.IA_FlashLight,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_Interact.IA_Interact,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_InfMenu.IA_InfMenu,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_Move.IA_Move,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelectadd.IA_WeaponSelectadd,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelectSubtrackt.IA_WeaponSelectSubtrackt,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_Reload.IA_Reload
+InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_UseMedkit.IA_UseMedkit,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_UseBandage.IA_UseBandage,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_Combad.IA_Combad,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_FlashLight.IA_FlashLight,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_Interact.IA_Interact,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_InfMenu.IA_InfMenu,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_Move.IA_Move,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelectadd.IA_WeaponSelectadd,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelectSubtrackt.IA_WeaponSelectSubtrackt,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_Reload.IA_Reload
+K2Node_EnhancedInputAction=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshActor.Physics.ConstraintsGroup,SphereComponent.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,SceneComponent.TransformCommon.Transform,Cam_C.PostProcess.Lens,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Lens,CamSwitchWithTracker_C.TransformCommon.Transform,BP_Charger_C.Collision.Collision,BP_Charger_C.TransformCommon.Transform,BP_Charger_C.Physics.ConstraintsGroup,BP_Bulky_C.Collision.Collision,BP_KronenFast_C.Collision.Collision,BP_KronenFast_C.TransformCommon.Transform,BP_KronenFast_C.Physics.ConstraintsGroup,BP_KronenFemale_C.TransformCommon.Transform,BP_KronenFemale_C.Physics.ConstraintsGroup,BP_KronenFemale_C.Collision.Collision,BP_Kronen_C.TransformCommon.Transform,BP_Kronen_C.Physics.ConstraintsGroup,BP_Slugger_C.TransformCommon.Transform,BP_Slugger_C.Physics.ConstraintsGroup,BP_Slugger_C.Collision.Collision,BP_StartNewGame_C.TransformCommon.Transform,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,BoxComponent.Collision.Collision,Ferry_BP_C.TransformCommon.Transform,LevelSequenceActor.TransformCommon.Transform,TextRenderComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.Items To Drop,K2Node_VariableGet.DefaultValueCategory.Textures,K2Node_VariableGet.DefaultValueCategory.SpriteComponent,K2Node_VariableGet.DefaultValueCategory.Ennemy,PrimitiveComponent.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.Ennemy
 K2Node_FunctionResult=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.TransformCommon.Transform,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshActor.Physics.ConstraintsGroup,SphereComponent.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,Cam_C.PostProcess.Lens,CameraComponent.PostProcess.Global Illumination,BP_Charger_C.Collision.Collision,BP_Charger_C.TransformCommon.Transform,BP_Charger_C.Physics.ConstraintsGroup,BP_Bulky_C.Collision.Collision,BP_StartNewGame_C.TransformCommon.Transform,BP_Slugger_C.TransformCommon.Transform,BP_Slugger_C.Physics.ConstraintsGroup,BP_Slugger_C.Collision.Collision,BP_KronenFast_C.Collision.Collision,BP_KronenFast_C.TransformCommon.Transform,BP_KronenFast_C.Physics.ConstraintsGroup,BP_KronenFemale_C.Collision.Collision,BP_KronenFemale_C.TransformCommon.Transform,BP_KronenFemale_C.Physics.ConstraintsGroup,BP_Kronen_C.TransformCommon.Transform,BP_Kronen_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,Ferry_BP_C.TransformCommon.Transform,TextRenderComponent.TransformCommon.Transform,LevelSequenceActor.TransformCommon.Transform
 K2Node_Tunnel=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.TransformCommon.Transform,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshActor.Physics.ConstraintsGroup,SphereComponent.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,Cam_C.PostProcess.Lens,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Lens,BP_Charger_C.Collision.Collision,BP_Charger_C.TransformCommon.Transform,BP_Charger_C.Physics.ConstraintsGroup,BP_Bulky_C.Collision.Collision,BP_KronenFast_C.Collision.Collision,BP_KronenFast_C.TransformCommon.Transform,BP_KronenFast_C.Physics.ConstraintsGroup,BP_KronenFemale_C.TransformCommon.Transform,BP_KronenFemale_C.Physics.ConstraintsGroup,BP_KronenFemale_C.Collision.Collision,BP_Kronen_C.TransformCommon.Transform,BP_Kronen_C.Physics.ConstraintsGroup,BP_Slugger_C.TransformCommon.Transform,BP_Slugger_C.Physics.ConstraintsGroup,BP_Slugger_C.Collision.Collision,BP_StartNewGame_C.TransformCommon.Transform,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,BoxComponent.Collision.Collision,Ferry_BP_C.TransformCommon.Transform,LevelSequenceActor.TransformCommon.Transform,TextRenderComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.Items To Drop,K2Node_VariableGet.DefaultValueCategory.Textures,K2Node_VariableGet.DefaultValueCategory.SpriteComponent,K2Node_VariableGet.DefaultValueCategory.Ennemy,K2Node_Tunnel.Inputs.1A3B495D49A0EB61E0C4358D8EEDE7D5
 Invetory_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshActor.Physics.ConstraintsGroup,SphereComponent.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,SceneComponent.TransformCommon.Transform,Cam_C.PostProcess.Lens,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Lens,CamSwitchWithTracker_C.TransformCommon.Transform,BP_Charger_C.Collision.Collision,BP_Charger_C.TransformCommon.Transform,BP_Charger_C.Physics.ConstraintsGroup,BP_Bulky_C.Collision.Collision,BP_StartNewGame_C.TransformCommon.Transform,BP_Slugger_C.TransformCommon.Transform,BP_Slugger_C.Physics.ConstraintsGroup,BP_Slugger_C.Collision.Collision,BP_KronenFast_C.Collision.Collision,BP_KronenFast_C.TransformCommon.Transform,BP_KronenFast_C.Physics.ConstraintsGroup,BP_KronenFemale_C.Collision.Collision,BP_KronenFemale_C.TransformCommon.Transform,BP_KronenFemale_C.Physics.ConstraintsGroup,BP_Kronen_C.TransformCommon.Transform,BP_Kronen_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,BoxComponent.Collision.Collision,Ferry_BP_C.TransformCommon.Transform,TextRenderComponent.TransformCommon.Transform,LevelSequenceActor.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.Items To Drop,K2Node_VariableGet.DefaultValueCategory.Textures,K2Node_VariableGet.DefaultValueCategory.SpriteComponent,K2Node_VariableGet.DefaultValueCategory.Ennemy,PrimitiveComponent.TransformCommon.Transform
