--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -197,6 +197,13 @@ LastLevel=/Game/_Level/Island
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=TextureEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=MaterialEditor
@@ -220,45 +227,38 @@ RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=TextureEditor
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Level/_LevelAssets/_Environment_Assets/shed/shed
-MRUItem1=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_Tavern
-MRUItem2=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Ceiling_Plaster_Mat
-MRUItem3=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Ceiling_Plaster_Texture
-MRUItem4=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Whitewood_Wall2_Texture
-MRUItem5=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_Tavern1_Texture
-MRUItem6=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_Tavern2_Texture
-MRUItem7=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_Tavern2_Mat
-MRUItem8=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_Tavern1_Mat
-MRUItem9=/Game/_Level/_LevelAssets/_Environment_Assets/shed/Shed_Inner_Texture
-MRUItem10=/Game/_Level/_LevelAssets/_Environment_Assets/shed/Shed_Inner_Mat
-MRUItem11=/Game/_Level/_LevelAssets/_Environment_Assets/shed/Shed_Roof_Mat
-MRUItem12=/Game/_Level/_LevelAssets/_Environment_Assets/shed/Shed1_Mat
-MRUItem13=/Game/_Level/_LevelAssets/_Environment_Assets/shed/Shed_Roof_Texture
-MRUItem14=/Game/_Level/_LevelAssets/_Environment_Assets/shed/Shed1_Texture
-MRUItem15=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_Redish1
-MRUItem16=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_Redish2
-MRUItem17=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Tile_Ceiling_Texture
-MRUItem18=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Tile_Ceiling_Mat
-MRUItem19=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_Redish_Texture2
-MRUItem20=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_Redish_2_Mat
-MRUItem21=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_Redish_Texture1
-MRUItem22=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_Redish_1_Mat
-MRUItem23=/Game/_Level/_LevelAssets/_Environment_Assets/roof/White_Wood_Roof_Mat
-MRUItem24=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_Greenish
-MRUItem25=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_Blue_Mat
-MRUItem26=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_Greenish_1_Mat
-MRUItem27=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_Greenish_Texture2
-MRUItem28=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_Greenish_2_Mat
-MRUItem29=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_Greenish_Texture1
+MRUItem0=/Game/_Core/_Player/_PlayerAnimations/_Animations/IDL/Carpenter_Lever
+MRUItem1=/Game/_Level/_LevelAssets/_Props/_keys/Lever_Box
+MRUItem2=/Game/_Core/_Player/_Assets/_Textures/_Meterials/Carp_M
+MRUItem3=/Game/_Core/_Player/_Assets/Carpenter_Char_SM
+MRUItem4=/Game/_Level/_LevelAssets/_Props/_keys/Lever_M
+MRUItem5=/Game/_Level/_LevelAssets/_Props/_keys/Lever_SM
+MRUItem6=/Game/_Level/_LevelAssets/_Props/_keys/tex/Lever_DM
+MRUItem7=/Game/_Level/_LevelAssets/_Environment_Assets/shed/shed
+MRUItem8=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_Tavern
+MRUItem9=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Ceiling_Plaster_Mat
+MRUItem10=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Ceiling_Plaster_Texture
+MRUItem11=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Whitewood_Wall2_Texture
+MRUItem12=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_Tavern1_Texture
+MRUItem13=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_Tavern2_Texture
+MRUItem14=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_Tavern2_Mat
+MRUItem15=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_Tavern1_Mat
+MRUItem16=/Game/_Level/_LevelAssets/_Environment_Assets/shed/Shed_Inner_Texture
+MRUItem17=/Game/_Level/_LevelAssets/_Environment_Assets/shed/Shed_Inner_Mat
+MRUItem18=/Game/_Level/_LevelAssets/_Environment_Assets/shed/Shed_Roof_Mat
+MRUItem19=/Game/_Level/_LevelAssets/_Environment_Assets/shed/Shed1_Mat
+MRUItem20=/Game/_Level/_LevelAssets/_Environment_Assets/shed/Shed_Roof_Texture
+MRUItem21=/Game/_Level/_LevelAssets/_Environment_Assets/shed/Shed1_Texture
+MRUItem22=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_Redish1
+MRUItem23=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_Redish2
+MRUItem24=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Tile_Ceiling_Texture
+MRUItem25=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Tile_Ceiling_Mat
+MRUItem26=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_Redish_Texture2
+MRUItem27=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_Redish_2_Mat
+MRUItem28=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_Redish_Texture1
+MRUItem29=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_Redish_1_Mat
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -273,7 +273,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/_Level/_LevelAssets/_Environment_Assets/roof
+ContentBrowserDrawer.SelectedPaths=/Game/_Level/_LevelAssets/_Props/_keys
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -295,7 +295,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.603907704
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/_Level/_LevelAssets/_Environment_Assets/roof
+ContentBrowserTab1.SelectedPaths=/Game/_Level/_LevelAssets/_Props/_keys/tex
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -2281,6 +2281,7 @@ Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 Shed_BP_C.TransformCommon=True
 Shed_BP_C.Rendering=True
 Shed_BP_C.Replication=True
@@ -3579,15 +3580,15 @@ Spasch_Screen_C.HLOD=True
 Spasch_Screen_C.Physics=True
 Spasch_Screen_C.WorldPartition=True
 Spasch_Screen_C.Events=True
-Texture2D.Interchange =True
 MaterialExpressionReroute.MaterialExpression=True
+Texture2D.Interchange =True
 
 [DetailPropertyExpansion]
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 PanelWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 Widget=
 Visual=
-Object=
+Object="\"Object.SkeletalMeshes\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 TextBlock=
 TextLayoutWidget=
@@ -3624,7 +3625,7 @@ ComboBoxKey="\"Object.Content.Options\" \"Object.Render Transform.RenderTransfor
 Spacer="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 ComboBoxString="\"Object.Content.DefaultOptions\" \"Object.Style.WidgetStyle\" \"Object.Style.ItemStyle\" \"Object.Style.ItemStyle.InactiveHoveredBrush.TintColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
-DataAsset="\"Object.Action.Triggers\" "
+DataAsset="\"Object.SkeletalMeshes\" "
 SkeletalMesh="\"Object.LODSettings.MinLod\" \"Object.LODSettings.MaxNumStreamedLODs\" \"Object.LODSettings.MaxNumOptionalLODs\" \"Object.LODSettings.DisableBelowMinLodStripping\" \"Object.LODSettings.bSupportLODStreaming\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 SkinnedAsset="\"Object.LODSettings.MinLod\" \"Object.LODSettings.MaxNumStreamedLODs\" \"Object.LODSettings.MaxNumOptionalLODs\" \"Object.LODSettings.DisableBelowMinLodStripping\" \"Object.LODSettings.bSupportLODStreaming\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
 LODInfoUILayout="\"Object.LODInfo.ScreenSize\" \"Object.LODInfo.BuildSettings\" \"Object.LODInfo.ReductionSettings\" "
@@ -4340,6 +4341,11 @@ CineCameraComponent.CameraOptions=True
 /Game/_Level/_LevelAssets/_Environment_Assets/shed/Shed_Inner_Mat.Shed_Inner_Mat=1
 /Game/_Level/_LevelAssets/_Environment_Assets/shed/shed.shed=1
 /Game/_Level/_LevelAssets/_Environment_Assets/roof/Whitewood_Wall2_Texture.Whitewood_Wall2_Texture=1
+/Game/_Level/_LevelAssets/_Props/_keys/tex/Lever_DM.Lever_DM=1
+/Game/_Level/_LevelAssets/_Props/_keys/Lever_Box_SM.Lever_Box_SM=1
+/Game/_Level/_LevelAssets/_Props/_keys/Lever_SM.Lever_SM=1
+/Game/_Level/_LevelAssets/_Props/_keys/Lever_M.Lever_M=1
+/Game/_Core/_Player/_PlayerAnimations/_Animations/IDL/Carpenter_Lever.Carpenter_Lever=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
