--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -196,17 +196,27 @@ LastLevel=/Game/_Level/Island
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=TextureEditor
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Core/_Player/_PlayerAnimations/_Animations/IDL/Carpenter_Lever
-MRUItem1=/Game/_Level/_LevelAssets/_Props/_keys/Lever_Box
-MRUItem2=/Game/_Level/_LevelAssets/_Props/_keys/Lever_M
-MRUItem3=/Game/_Level/_LevelAssets/_Props/_keys/Lever_SM
-MRUItem4=/Game/_Level/_LevelAssets/_Props/_keys/tex/Lever_DM
+MRUItem0=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Walk1
+MRUItem1=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Death1
+MRUItem2=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Attack1_Armature_M_004_Armature_M_005Action_001
+MRUItem3=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Idle1
+MRUItem4=/Game/_Core/_Enemies/Kronen_Fast/Kronen_Fast_Model
+MRUItem5=/Game/_Core/_Player/_PlayerAnimations/_Animations/IDL/Carpenter_Lever
+MRUItem6=/Game/_Level/_LevelAssets/_Props/_keys/Lever_Box
+MRUItem7=/Game/_Level/_LevelAssets/_Props/_keys/Lever_M
+MRUItem8=/Game/_Level/_LevelAssets/_Props/_keys/Lever_SM
+MRUItem9=/Game/_Level/_LevelAssets/_Props/_keys/tex/Lever_DM
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -3576,13 +3586,19 @@ key1_2_C.Physics=True
 key1_2_C.Networking=True
 key1_2_C.Input=True
 key1_2_C.Actor=True
+PersonaPreviewSceneDescription.Animation Blueprint=True
+SkeletonEditingTool.Action=True
+MirroringProperties.Mirror=True
+OrientingProperties.Orient=True
+SkeletonEditingProperties.Details=True
+SkeletonEditingProperties.Viewport Axis Settings=True
 
 [DetailPropertyExpansion]
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 PanelWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 Widget=
 Visual=
-Object=
+Object="\"Object.SkeletalMeshes\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 TextBlock=
 TextLayoutWidget=
@@ -4343,6 +4359,8 @@ CineCameraComponent.CameraOptions=True
 /Game/_Level/_Blueprints/wood_BP.wood_BP=0
 /Game/_Level/_LevelAssets/_Environment_Assets/shed/Shed_Inner_Texture.Shed_Inner_Texture=1
 /Game/_Level/_physicalMaterials/PM_IF_Rock.PM_IF_Rock=1
+/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Idle1.KronenFast_Animations_Idle1=1
+/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Death1.KronenFast_Animations_Death1=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -5747,6 +5765,11 @@ wood_BP_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformComm
 Fence_BP_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshActor.Physics.ConstraintsGroup,SphereComponent.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,SceneComponent.TransformCommon.Transform,Cam_C.PostProcess.Lens,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Lens,CamSwitchWithTracker_C.TransformCommon.Transform,BP_Charger_C.Collision.Collision,BP_Charger_C.TransformCommon.Transform,BP_Charger_C.Physics.ConstraintsGroup,BP_Bulky_C.Collision.Collision,BP_KronenFast_C.Collision.Collision,BP_KronenFast_C.TransformCommon.Transform,BP_KronenFast_C.Physics.ConstraintsGroup,BP_KronenFemale_C.TransformCommon.Transform,BP_KronenFemale_C.Physics.ConstraintsGroup,BP_KronenFemale_C.Collision.Collision,BP_Kronen_C.TransformCommon.Transform,BP_Kronen_C.Physics.ConstraintsGroup,BP_Slugger_C.TransformCommon.Transform,BP_Slugger_C.Physics.ConstraintsGroup,BP_Slugger_C.Collision.Collision,BP_StartNewGame_C.TransformCommon.Transform,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,BoxComponent.Collision.Collision,Ferry_BP_C.TransformCommon.Transform,LevelSequenceActor.TransformCommon.Transform,TextRenderComponent.TransformCommon.Transform,Tavern_Light_BP_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.Items To Drop,K2Node_VariableGet.DefaultValueCategory.Textures,K2Node_VariableGet.DefaultValueCategory.SpriteComponent,K2Node_VariableGet.DefaultValueCategory.Ennemy,PrimitiveComponent.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.Ennemy
 Rifle_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshActor.Physics.ConstraintsGroup,SphereComponent.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,SceneComponent.TransformCommon.Transform,Cam_C.PostProcess.Lens,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Lens,CamSwitchWithTracker_C.TransformCommon.Transform,BP_Charger_C.Collision.Collision,BP_Charger_C.TransformCommon.Transform,BP_Charger_C.Physics.ConstraintsGroup,BP_Bulky_C.Collision.Collision,BP_KronenFast_C.Collision.Collision,BP_KronenFast_C.TransformCommon.Transform,BP_KronenFast_C.Physics.ConstraintsGroup,BP_KronenFemale_C.TransformCommon.Transform,BP_KronenFemale_C.Physics.ConstraintsGroup,BP_KronenFemale_C.Collision.Collision,BP_Kronen_C.TransformCommon.Transform,BP_Kronen_C.Physics.ConstraintsGroup,BP_Slugger_C.TransformCommon.Transform,BP_Slugger_C.Physics.ConstraintsGroup,BP_Slugger_C.Collision.Collision,BP_StartNewGame_C.TransformCommon.Transform,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,BoxComponent.Collision.Collision,Ferry_BP_C.TransformCommon.Transform,LevelSequenceActor.TransformCommon.Transform,TextRenderComponent.TransformCommon.Transform,Tavern_Light_BP_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.Items To Drop,K2Node_VariableGet.DefaultValueCategory.Textures,K2Node_VariableGet.DefaultValueCategory.SpriteComponent,K2Node_VariableGet.DefaultValueCategory.Ennemy,PrimitiveComponent.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.Ennemy
 key1_2_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,SkeletalMeshActor.Physics.ConstraintsGroup,SphereComponent.TransformCommon.Transform,SphereComponent.Physics.ConstraintsGroup,SceneComponent.TransformCommon.Transform,Cam_C.PostProcess.Lens,CameraComponent.PostProcess.Global Illumination,CameraComponent.PostProcess.Lens,CamSwitchWithTracker_C.TransformCommon.Transform,BP_Charger_C.Collision.Collision,BP_Charger_C.TransformCommon.Transform,BP_Charger_C.Physics.ConstraintsGroup,BP_Bulky_C.Collision.Collision,BP_KronenFast_C.Collision.Collision,BP_KronenFast_C.TransformCommon.Transform,BP_KronenFast_C.Physics.ConstraintsGroup,BP_KronenFemale_C.TransformCommon.Transform,BP_KronenFemale_C.Physics.ConstraintsGroup,BP_KronenFemale_C.Collision.Collision,BP_Kronen_C.TransformCommon.Transform,BP_Kronen_C.Physics.ConstraintsGroup,BP_Slugger_C.TransformCommon.Transform,BP_Slugger_C.Physics.ConstraintsGroup,BP_Slugger_C.Collision.Collision,BP_StartNewGame_C.TransformCommon.Transform,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,BoxComponent.Collision.Collision,Ferry_BP_C.TransformCommon.Transform,LevelSequenceActor.TransformCommon.Transform,TextRenderComponent.TransformCommon.Transform,Tavern_Light_BP_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.Items To Drop,K2Node_VariableGet.DefaultValueCategory.Textures,K2Node_VariableGet.DefaultValueCategory.SpriteComponent,K2Node_VariableGet.DefaultValueCategory.Ennemy,PrimitiveComponent.TransformCommon.Transform,PropertyWrapper.DefaultValueCategory.Ennemy
+SkeletonEditingTool=SkeletonEditingProperties.Details.Transform
+ProjectionProperties=SkeletonEditingProperties.Details.Transform
+MirroringProperties=SkeletonEditingProperties.Details.Transform
+OrientingProperties=SkeletonEditingProperties.Details.Transform
+SkeletonEditingProperties=SkeletonEditingProperties.Details.Transform
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
