Fast Kronen Footsteps
Re-adjusted footstep audio for Fast Kronen to be more in sync with animation

--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -3592,6 +3592,7 @@ MirroringProperties.Mirror=True
 OrientingProperties.Orient=True
 SkeletonEditingProperties.Details=True
 SkeletonEditingProperties.Viewport Axis Settings=True
+AnimationRecordingParameters.Options=True
 
 [DetailPropertyExpansion]
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
