Carpenter Crawl Update
Refined crawl animation for Carpenter so that the feet aren't as wobbly.

--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -199,6 +199,7 @@ RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=StaticMeshEditor
@@ -207,16 +208,17 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=TextureEditor
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Walk1
-MRUItem1=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Attack1
-MRUItem2=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Death1
-MRUItem3=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Idle1
-MRUItem4=/Game/_Core/_Enemies/Kronen_Fast/Kronen_Fast_Model
-MRUItem5=/Game/_Core/_Player/_PlayerAnimations/_Animations/IDL/Carpenter_Lever
-MRUItem6=/Game/_Level/_LevelAssets/_Props/_keys/Lever_Box
-MRUItem7=/Game/_Level/_LevelAssets/_Props/_keys/Lever_M
-MRUItem8=/Game/_Level/_LevelAssets/_Props/_keys/Lever_SM
-MRUItem9=/Game/_Level/_LevelAssets/_Props/_keys/tex/Lever_DM
+MRUItem0=/Game/_Core/_Player/_PlayerAnimations/_Animations/walk/Carpenter_Crawl
+MRUItem1=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Walk1
+MRUItem2=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Attack1
+MRUItem3=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Death1
+MRUItem4=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Idle1
+MRUItem5=/Game/_Core/_Enemies/Kronen_Fast/Kronen_Fast_Model
+MRUItem6=/Game/_Core/_Player/_PlayerAnimations/_Animations/IDL/Carpenter_Lever
+MRUItem7=/Game/_Level/_LevelAssets/_Props/_keys/Lever_Box
+MRUItem8=/Game/_Level/_LevelAssets/_Props/_keys/Lever_M
+MRUItem9=/Game/_Level/_LevelAssets/_Props/_keys/Lever_SM
+MRUItem10=/Game/_Level/_LevelAssets/_Props/_keys/tex/Lever_DM
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -4362,6 +4364,7 @@ CineCameraComponent.CameraOptions=True
 /Game/_Level/_physicalMaterials/PM_IF_Rock.PM_IF_Rock=1
 /Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Idle1.KronenFast_Animations_Idle1=1
 /Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Death1.KronenFast_Animations_Death1=1
+/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Idle_Anim.Carpenter_Axe_Idle_Anim=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
